<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.UpdateDeleteDriver">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:fontFamily="sans-serif-smallcaps"
                android:textColor="@color/dimGray"
                android:text="@string/updateDeleteText"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_full_name"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17dp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-smallcaps"
                    android:hint="@string/full_name_of_the_driver"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_phone_number"
                    android:inputType="number"
                    android:textSize="17dp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_marginTop="10dp"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/driver_phone_number"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_phone_number_alternative"
                    android:textColor="@color/colorPrimary"
                    android:inputType="number"
                    android:textSize="17dp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_marginTop="10dp"
                    android:hint="@string/driver_phone_number_alternative"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/driver_age"
                    android:textColor="@color/colorPrimary"
                    android:textSize="17dp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-smallcaps"
                    android:layout_marginTop="10dp"
                    android:hint="@string/driver_age"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_address"
                    android:textSize="17dp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@color/colorPrimary"
                    android:hint="@string/driver_address"
                    android:layout_marginTop="10dp"
                    />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_username"
                    android:hint="@string/driver_username"
                    android:inputType="text"
                    android:layout_marginTop="10dp"
                    android:textSize="17dp"
                    android:editable="false"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-smallcaps"
                    android:textColor="@color/colorPrimary"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_password"
                    android:hint="@string/driver_password"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:textSize="17dp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-smallcaps"
                    android:inputType="text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/driver_bus_id"
                    android:hint="@string/driver_password"
                    android:textColor="@color/colorPrimary"
                    android:layout_marginTop="10dp"
                    android:textSize="17dp"
                    android:textAllCaps="false"
                    android:fontFamily="sans-serif-smallcaps"
                    android:inputType="text"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="2dp"
                        android:background="@color/colorPrimaryDark"
                        android:textColor="@color/white"
                        android:id="@+id/update"
                        android:layout_weight="1"
                        android:text="Update  "/>
                    <Button
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginLeft="2dp"
                        android:background="@color/colorPrimaryDark"
                        android:textColor="@color/white"
                        android:id="@+id/deleteDriver"
                        android:layout_weight="1"
                        android:text="Delete "/>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>